# manager

./: .gitignore  AGENTS.md  Dockerfile.backend  TODO.md  docker-compose.yml  main.py  migrate  mypy.ini  pyproject.toml  run
.github/workflows/: deploy.yml
.opencode/: package-lock.json
.opencode/tool/: database.ts
agents/: AGENTS.md  pyproject.toml
agents/.cursor/commands/: fix.md
agents/agents/: db_ops.py  main.py  processor.py  service.py
agents/agents/prompts/: reviewer.md
backend/: pyproject.toml  test_ser.py
backend/src/backend/: __init__.py  main.py
backend/src/backend/api/v1/: agents_router.py  progress_router.py  prompts_router.py  reviews_router.py  routers.py  schemas.py  telegram_router.py
backend/src/backend/auth/: deps.py  security.py  sso.py
cli/: agents.py  main.py  telegram.py
frontend/: AGENTS.md  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/api/: accounts.ts  agents.ts  auth.ts  dialogs.ts  folders.ts  http.ts  index.ts  progress.ts  prompts.ts  reviews.ts  telegram.ts  types.ts
frontend/src/components/: DisclaimerModal.tsx
frontend/src/hooks/: index.ts  useAccounts.ts  useAgents.ts  useAuth.ts  useDialogs.ts  useFolders.ts  useProgress.ts  usePrompts.ts  useReviews.ts  useTelegram.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: ForbiddenPage.tsx  NotFoundPage.tsx  index.ts
frontend/src/stores/: auth.ts
shared/: pyproject.toml
shared/migrations/: env.py
shared/migrations/versions/: 3926f0fe0afb_add_session_string_to_telegramaccount.py  43ad5c9b6219_initial.py  4f922d812f37_prompt_versioning_and_review_link.py  5e679ce300d1_add_seniority_to_vacancy_review.py  (+6 more)
shared/shared/: models.py
telegram/: pyproject.toml
telegram/telegram/: client.py  converters.py  main.py  service.py
(+40 files in other folders)
