[project]
name = "manager"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.1",
    "telegram",
    "agents",
    "shared",
    "backend",
]

[tool.uv.workspace]
members = [
    "telegram",
    "agents",
    "shared",
    "backend",
]

[tool.uv.sources]
telegram = { workspace = true }
agents = { workspace = true }
shared = { workspace = true }
backend = { workspace = true }

[tool.ruff]
indent-width = 2
line-length = 88

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "types-passlib>=1.7.7.20250602",
]
